// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in Arabic 1`] = `
<div>
  <div
    class="space-y-4"
    dir="rtl"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-neutral-800"
        >
          Label Preview
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-neutral-300 px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="rounded-md bg-neutral-800 px-4 py-1.5 text-sm font-semibold text-white transition-colors hover:bg-neutral-700"
          data-testid="print-all-labels-btn"
          type="button"
        >
          Print All Labels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-lg border-2 border-neutral-300 p-4"
        data-testid="medication-label"
        dir="rtl"
      >
        <h3
          class="text-xl font-bold text-neutral-900"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-neutral-600"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-neutral-800"
          data-testid="label-dosage"
        >
          1
           
          capsule
          <span
            class="text-sm font-normal text-neutral-600"
          >
             
            (
            3
            × 
            يومياً
            )
          </span>
        </p>
        <div
          aria-label="Dosage timing"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="صباح"
              class="h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="5"
              />
              <path
                d="M12 1v3M12 20v3M4.22 4.22l2.12 2.12M17.66 17.66l2.12 2.12M1 12h3M20 12h3M4.22 19.78l2.12-2.12M17.66 6.34l2.12-2.12"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              صباح
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="ظهر"
              class="h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 002-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2v0a5 5 0 00-5 5v6c0 1.1.9 2 2 2h3zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              ظهر
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="مساء"
              class="h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              مساء
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-neutral-700"
          data-testid="label-duration"
        >
          7
           
          يوم
        </p>
        <p
          class="mt-3 text-sm font-medium text-neutral-700"
          data-testid="label-pharmacy-name"
        >
          صيدلية النور
        </p>
        <p
          class="mt-1 text-xs text-neutral-500"
          data-testid="label-date"
        >
          2026-05-12
        </p>
        <p
          class="mt-1 text-xs text-neutral-400"
          data-testid="label-batch"
        >
          رقم التشغيلة
          : 
          LOT-2026-04A
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in Dari 1`] = `
<div>
  <div
    class="space-y-4"
    dir="rtl"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-neutral-800"
        >
          Label Preview
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-neutral-300 px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="rounded-md bg-neutral-800 px-4 py-1.5 text-sm font-semibold text-white transition-colors hover:bg-neutral-700"
          data-testid="print-all-labels-btn"
          type="button"
        >
          Print All Labels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-lg border-2 border-neutral-300 p-4"
        data-testid="medication-label"
        dir="rtl"
      >
        <h3
          class="text-xl font-bold text-neutral-900"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-neutral-600"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-neutral-800"
          data-testid="label-dosage"
        >
          1
           
          capsule
          <span
            class="text-sm font-normal text-neutral-600"
          >
             
            (
            3
            × 
            روزانه
            )
          </span>
        </p>
        <div
          aria-label="Dosage timing"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="صبح"
              class="h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="5"
              />
              <path
                d="M12 1v3M12 20v3M4.22 4.22l2.12 2.12M17.66 17.66l2.12 2.12M1 12h3M20 12h3M4.22 19.78l2.12-2.12M17.66 6.34l2.12-2.12"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              صبح
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="ظهر"
              class="h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 002-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2v0a5 5 0 00-5 5v6c0 1.1.9 2 2 2h3zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              ظهر
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="شب"
              class="h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              شب
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-neutral-700"
          data-testid="label-duration"
        >
          7
           
          روز
        </p>
        <p
          class="mt-3 text-sm font-medium text-neutral-700"
          data-testid="label-pharmacy-name"
        >
          داروخانه نور
        </p>
        <p
          class="mt-1 text-xs text-neutral-500"
          data-testid="label-date"
        >
          2026-05-12
        </p>
        <p
          class="mt-1 text-xs text-neutral-400"
          data-testid="label-batch"
        >
          شماره بچ
          : 
          LOT-2026-04A
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`LabelPreviewPanel > Snapshot tests > matches snapshot in English 1`] = `
<div>
  <div
    class="space-y-4"
    dir="ltr"
  >
    <div
      class="flex items-center justify-between"
    >
      <div
        class="flex items-center gap-3"
      >
        <h3
          class="text-lg font-semibold text-neutral-800"
        >
          Label Preview
        </h3>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <select
          class="rounded-md border border-neutral-300 px-3 py-1.5 text-sm focus:border-primary-500 focus:outline-none focus:ring-1 focus:ring-primary-500"
          data-testid="language-selector"
        >
          <option
            value="en"
          >
            English
          </option>
          <option
            value="ar"
          >
            العربية (Arabic)
          </option>
          <option
            value="fa"
          >
            دری (Dari)
          </option>
        </select>
        <button
          class="rounded-md bg-neutral-800 px-4 py-1.5 text-sm font-semibold text-white transition-colors hover:bg-neutral-700"
          data-testid="print-all-labels-btn"
          type="button"
        >
          Print All Labels
        </button>
      </div>
    </div>
    <div
      class="space-y-4"
    >
      <div
        class="print-label rounded-lg border-2 border-neutral-300 p-4"
        data-testid="medication-label"
        dir="ltr"
      >
        <h3
          class="text-xl font-bold text-neutral-900"
          data-testid="label-med-name"
        >
          Amoxicillin 500mg Capsule
        </h3>
        <p
          class="text-base text-neutral-600"
          data-testid="label-brand-name"
        >
          Amoxil
        </p>
        <p
          class="mt-2 text-lg font-semibold text-neutral-800"
          data-testid="label-dosage"
        >
          1
           
          capsule
          <span
            class="text-sm font-normal text-neutral-600"
          >
             
            (
            3
            × 
            daily
            )
          </span>
        </p>
        <div
          aria-label="Dosage timing"
          class="mt-3 flex items-center gap-4"
          role="group"
        >
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Morning"
              class="h-8 w-8 text-amber-500"
              data-testid="timing-icon-morning"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="5"
              />
              <path
                d="M12 1v3M12 20v3M4.22 4.22l2.12 2.12M17.66 17.66l2.12 2.12M1 12h3M20 12h3M4.22 19.78l2.12-2.12M17.66 6.34l2.12-2.12"
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-width="2"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              Morning
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Noon"
              class="h-8 w-8 text-orange-500"
              data-testid="timing-icon-noon"
              fill="none"
              role="img"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 2v7c0 1.1.9 2 2 2h4a2 2 0 002-2V2"
              />
              <path
                d="M7 2v20"
              />
              <path
                d="M21 15V2v0a5 5 0 00-5 5v6c0 1.1.9 2 2 2h3zm0 0v7"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              Noon
            </span>
          </div>
          <div
            class="flex flex-col items-center gap-1"
          >
            <svg
              aria-label="Night"
              class="h-8 w-8 text-indigo-500"
              data-testid="timing-icon-night"
              fill="currentColor"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"
              />
            </svg>
            <span
              class="text-xs font-medium text-neutral-600"
            >
              Night
            </span>
          </div>
        </div>
        <p
          class="mt-3 text-base text-neutral-700"
          data-testid="label-duration"
        >
          7
           
          days
        </p>
        <p
          class="mt-3 text-sm font-medium text-neutral-700"
          data-testid="label-pharmacy-name"
        >
          Test Pharmacy
        </p>
        <p
          class="mt-1 text-xs text-neutral-500"
          data-testid="label-date"
        >
          2026-05-12
        </p>
        <p
          class="mt-1 text-xs text-neutral-400"
          data-testid="label-batch"
        >
          Lot
          : 
          LOT-2026-04A
        </p>
      </div>
    </div>
  </div>
</div>
`;
